appId: host.exp.Exponent
---
# launchApp step removed since Expo Go manages app launch externally

- launchApp
- waitForAnimationToEnd
- assertVisible: type=android.widget.ProgressBar
- waitForAnimationToEnd
- assertVisible: "Packet Builder"


- tapOn: "SID"
- inputText: "50759686"
- tapOn: "Search Offenders"
- assertVisible: "Search Results"
- tapOn: "SMITH,J M (50759686)"
- assertVisible: "Selected Offender"
- tapOn: "Create Packet"

- assertVisible: "Packet Summary"
- tapOn: "Open Packet Review"
- assertVisible: "Packet Review"
